# CareerSathi

./: .gitignore  README.md  careersathi-ml.ipynb  chat.html  features.txt  pyproject.toml  report.html  supabase.sql
app/: chat_upload_meta.py  database.py  main.py  minio_handler.py  rate_limiter.py  schemas.py
app/ml_models/: city_encoder.pkl  random_forest_model.pkl  scaler.pkl  stream_encoder.pkl  target_encoder.pkl
app/prompts/: system_prompt.txt
app/routers/: admin.py  auth.py  chat.py  profile.py  reports.py  search.py
app/services/: chat_service.py  email_service.py  gemini_pool.py  ml_service.py  ocr_service.py  password_reset_service.py  tavily_service.py
static/css/: auth.css  chat.css  index.css  login.css  messagebox.css  my_stuff.css  newuserwelcome.css  report_pdf_preview.css  reports.css  reports_details.css  settings.css  shared_navbar.css  signup.css  theme.css  user_profile.css
static/css/admin/: bucket_detail.css  dashboard.css  database.css  shared_admin_shell.css  universities.css  user_detail.css  (+1 more)
static/js/: report_pdf_preview.js  reports_details.js
templates/: chat.html  forgot_password.html  index.html  login.html  my_stuff.html  newuserwelcome.html  privacy.html  report_pdf_preview.html  reports.html  reports_details.html  search_courses.html  search_universities.html  settings.html  shared_navbar.html  signup.html  terms.html  userprofile.html
templates/admin/: bucket_detail.html  dashboard.html  database.html  shared_admin_navbar.html  universities.html  user_detail.html  users.html
templates/partials/: chat_input.html
