[project]
name = "career-sathi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "google-genai>=1.57.0",
    "gtts>=2.5.4",
    "jinja2>=3.1.6",
    "joblib>=1.5.3",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "scikit-learn>=1.6.1",
    "supabase>=2.27.0",
    "uvicorn>=0.40.0",
    "minio>=7.2.7",
    "opencv-python-headless>=4.10.0.84",
    "paddleocr>=2.7,<3",
]
